# curand_test

./: .gitignore  6800106.err  6800150.err  6800921.out  6801140.out  6931264.out  6939712.out  6955363.out  6955455.out  6962997.out  6968791.out  6970594.out  6977699.out  6977958.out  CMakeLists.txt  README.md  a.out  curand_and_thrust  curand_and_thrust.cpp  curand_and_thrust.cu  curand_and_thrust.cu.prehip  curand_and_thrust.hip  curand_test.slurm  device_api_example.cu  distribute_rangen.cu  distribute_rangen.hip  env_01.sh  gdb.slurm  hmc.sh  list_device  list_device.cu  list_device.hip  mpi_hello_world  mpi_hello_world.c  mpi_test  mpi_test.cu  mpi_test.hip  nvshmem_sample.hip  rocshmem_hello_world.cpp  rs.sh
12_cmake_hip_add_executable/: CMakeLists.txt  MatrixTranspose.cpp
